--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,7 +1,9 @@
 .addOptions {
   position: absolute;
-  right: 8%;
-  top: 14%;
+  top: 54px;
+  left: 0px;
+  z-index: 1;
+  border: 3px solid #EBF0F5;
   border-radius: 18px;
   background: white;
   display: -webkit-box;
@@ -39,8 +41,9 @@
 
 .addOptions_dark {
   position: absolute;
-  right: 10%;
-  top: 12%;
+  top: 54px;
+  left: 0px;
+  z-index: 1;
   border-radius: 18px;
   background: #2c2d31;
   display: -webkit-box;
@@ -195,6 +198,7 @@ button:hover img {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  height: 500px;
   width: 100%;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
@@ -202,6 +206,7 @@ button:hover img {
 
 .contents .icons {
   padding: 20px;
+  height: 150px;
   text-align: center;
 }
 
@@ -212,6 +217,7 @@ button:hover img {
 .contents_dark {
   padding-top: 20px;
   color: #94a8c0;
+  height: 500px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -223,6 +229,7 @@ button:hover img {
 .contents_dark .icons {
   padding: 20px;
   text-align: center;
+  height: 150px;
 }
 
 .contents_dark .icons:hover {
@@ -399,8 +406,8 @@ button:hover img {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  -ms-flex-wrap: wrap-reverse;
-      flex-wrap: wrap-reverse;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   width: 100%;
 }
 
@@ -454,6 +461,17 @@ button:hover img {
 
 .settings_cover {
   position: relative;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 150px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  margin-top: 15px;
 }
 
 .settings {
@@ -461,8 +479,6 @@ button:hover img {
   background-color: transparent;
   height: 44px;
   width: 65px;
-  margin-right: 30px;
-  margin-top: 15px;
 }
 
 .settings_dark {
@@ -470,12 +486,27 @@ button:hover img {
   background-color: transparent;
   height: 44px;
   width: 65px;
-  margin-right: 30px;
-  margin-top: 15px;
+}
+
+.add_Icon {
+  border: 1.5px solid  #dcdcdc;
+  background-color: transparent;
+  height: 44px;
+  width: 65px;
+  margin-right: 10px;
+}
+
+.add_Icon_dark {
+  border: 2px solid  black;
+  background-color: transparent;
+  height: 44px;
+  width: 65px;
+  margin-right: 10px;
 }
 
 .search {
   width: 50%;
+  min-width: 330px;
   position: relative;
   margin-top: 15px;
   height: 43.5px;
