--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -2,9 +2,10 @@
 
 .addOptions{
   position:absolute;
-  right:8%;
-  top:14%;
-  // border: 1px solid #EBF0F5;
+  top: 54px;
+  left: 0px;
+  z-index: 1;
+  border: 3px solid #EBF0F5;
   border-radius: 18px;
   background:white;//#2c2d31;
   display: flex;
@@ -32,9 +33,10 @@
 }
 .addOptions_dark{
   position:absolute;
-  right:10%;
-  top:12%;
-  // padding: 15px;
+  top: 54px;
+  left: 0px;
+  z-index: 1;
+  // border: 3px solid #EBF0F5;
   border-radius: 18px;
   background:#2c2d31;
   display: flex;
@@ -161,10 +163,13 @@ button:hover{
 .contents{
   padding-top: 20px;
   display: flex;
+  height: 500px;
   width:100%;
   flex-wrap: wrap;
    .icons{
+    // background-color: #445EE2;
      padding: 20px;
+     height: 150px;
     text-align: center;
    }
    .icons:hover{
@@ -174,12 +179,15 @@ button:hover{
 .contents_dark{
   padding-top: 20px;
   color:#94a8c0;
+  height: 500px;
   display: flex;
   width:100%;
+  
   flex-wrap: wrap;
    .icons{
      padding: 20px;
       text-align: center;
+      height: 150px;
    }
    .icons:hover{
     opacity: 0.8;
@@ -336,7 +344,7 @@ button:hover{
   padding-right: 0px;;
   display: flex;
   flex-direction: row;
-  flex-wrap:wrap-reverse;
+  flex-wrap:wrap;
   width:100%;
   // padding-bottom: 40px;
 }
@@ -380,27 +388,52 @@ button:hover{
 }
 .settings_cover{
   position: relative;
+  align-items: center;
+  width:150px;
+  display:flex;
+  justify-content: space-evenly;
+  margin-top: 15px;
 }
 .settings{
   border:1.5px solid  #dcdcdc;//white;
   background-color: transparent;
   height: 44px;
   width:65px;
-  margin-right:30px;
-   margin-top: 15px;
+  
+  // margin-right:30px;
+  //  margin-top: 15px;
 }
 .settings_dark{
   border:2px solid  black;;
   background-color:transparent;
   height: 44px;
   width:65px;
-  margin-right: 30px;
-   margin-top: 15px;
+  // margin-right: 30px;
+  //  margin-top: 15px;
  
 }
-
+.add_Icon{
+  border:1.5px solid  #dcdcdc;//white;
+  background-color: transparent;
+  height: 44px;
+  width:65px;
+  margin-right: 10px;
+  // margin-right:30px;
+  //  margin-top: 15px;
+}
+.add_Icon_dark{
+  border:2px solid  black;;
+  background-color:transparent;
+  height: 44px;
+  width:65px;
+  margin-right: 10px;
+  // margin-right: 30px;
+  //  margin-top: 15px;
+ 
+}
 .search{
   width:50%;
+  min-width: 330px;
  //min-width: 430px;
   position: relative;
   margin-top: 15px;
